--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -18,20 +18,31 @@
     <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
     {% block css %} {% endblock %}
 
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}PIMS Proteomics LIMS{% endblock %}</title>
   </head>
   <body>
     <div id="maincontent" class="container">
-        <nav class="navbar navbar-light bg-light">
-          <div class="container-fluid">
+      <div class="row">
+        <h2>PIMS Proteomics LIMS System</h2>
+      </div>
+      <div class="row">
+          <div class="col-md-2">
+            <div class="d-grid gap-2">
+              <button class="btn btn-primary">Home</button>
+              <button class="btn btn-primary">Search</button>
+              <button class="btn btn-warning mt-3 adminonly">New Project</button>
+              <button class="btn btn-warning mb-3 adminonly">Reports</button>
+              <button class="btn btn-primary">Account</button>
               <button class="btn btn-danger" id="logout">Log Out</button>
-              <h4 id="loginname">[Name] logged in</h4>
+            </div>
           </div>
-        </nav>
-        {% block content %}{% endblock %}
+          <div class="col-md-10">
+            {% block content %}{% endblock %}
+          </div>
+        </div>
         <div id="footer" class="row">
           <div class="col-md-12">
-            Please report any problems to our bug database</a>
+            PIMS Proteomics LIMS - Please report any problems to our <a href="https://github.com/s-andrews/pims/issues">bug database</a>
           </div>
         </div>
       
