--- a/www/templates/edit_project.html
+++ b/www/templates/edit_project.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="row">
-    {% if project['id'] != "" %}
-        <h2>Edit Project {{ project["id"] }}</h2>
+<div class="row text-center">
+    {% if project['project_id'] %}
+        <h2>Edit Project {{ project["project_id"] }}</h2>
     {% else %}
         <h2>New Project</h2>
     {% endif %}
@@ -27,12 +27,12 @@
 <div class="row">
     <div class="form-group">
         <label for="project_title">Title</label>
-        <input type="text" class="form-control" id="project_title" placeholder="Short title name">
+        <input type="text" class="form-control" id="project_title" placeholder="Short title name" value="{{ project.title }}">
     </div>
 
     <div class="form-group">
         <label for="project_description">Description</label>
-        <textarea class="form-control" id="project_description" rows="5"></textarea>
+        <textarea class="form-control" id="project_description" rows="5">{{ project.description }}</textarea>
     </div>
 </div>
 
