--- a/www/templates/edit_project.html
+++ b/www/templates/edit_project.html
@@ -36,6 +36,21 @@
     </div>
 </div>
 
+<div class="row">
+    <div class="col-md-3">
+        <div class="form-group">
+            <label for="project_tags">Tags</label>
+            <input type="text" class="form-control" id="new_tag">
+            <button type="button" class="btn btn-primary btn-sm">Add New</button>
+        </div>
+        <div class="col-md-9">
+            <button type="button" class="btn-close">Cell or Tissue</button>
+            <button type="button" class="btn-close">Tag</button>
+        </div>
+
+    </div>
+</div>
+
 <div class="row mt-5">
     <button id="saveproject" type="button" class="btn btn-primary">Save Project</button>
 </div>
