Added logo and updated themeing

--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
+
+<div class="row text-center"> 
+  <div>
+    <img src="{{ url_for('static', filename='images/pims_logo_path.svg') }}" width="400px">
+  </div>
+</div>
+
 <div class="row">
   <p>
     This is the PIMS proteomics LIMS system.  Here you can see your existing projects and results, and can share these with others.
