--- a/www/templates/base.html
+++ b/www/templates/base.html
@@ -5,14 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <!-- Data Tables -->
-    <link href="https://cdn.datatables.net/1.11.4/css/dataTables.bootstrap5.min.css" rel="stylesheet">
-
-    <!-- JSTree -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" />
+    <!-- Bootstrap CSS (flatly from bootswatch)-->
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 
     <!-- CSS -->
     <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
@@ -22,11 +16,11 @@
   </head>
   <body>
     <div id="maincontent" class="container">
-      <div class="row text-center">
-        <h1>PIMS Proteomics LIMS System</h1>
-      </div>
       <div class="row">
           <div class="col-md-2">
+            <div class="d-grid gap-2  pb-2">
+              <img src="{{ url_for('static', filename='images/pims_logo_path_notext.svg') }}"  width=60% style="margin-left: auto; margin-right: auto;">
+            </div>
             <div class="d-grid gap-2">
               <a href="{{ url_for('index')}}" class="btn btn-primary" role="button">Home</a>
               <a href="{{ url_for('search')}}" class="btn btn-primary" role="button">Search</a>
@@ -39,12 +33,16 @@
             </div>
           </div>
           <div class="col-md-10">
+            <div class="row text-center">
+              <h2>PIMS Proteomics LIMS System</h2>
+            </div>
+      
             {% block content %}{% endblock %}
           </div>
         </div>
         <div id="footer" class="row">
           <div class="col-md-12">
-            PIMS Proteomics LIMS - Please report any problems to our <a href="https://github.com/s-andrews/pims/issues">bug database</a>
+            <img src="{{ url_for('static', filename='images/bioinformatics_logo.svg') }}" width="100px"> <a href="https://github.com/s-andrews/pims">PIMS Proteomics LIMS</a> - Please report any problems to our <a href="https://github.com/s-andrews/pims/issues">bug database</a>
           </div>
         </div>
       
