--- a/www/templates/edit_project.html
+++ b/www/templates/edit_project.html
@@ -41,13 +41,14 @@
         <div class="form-group">
             <label for="project_tags">Tags</label>
             <input type="text" class="form-control" id="new_tag">
-            <button type="button" class="btn btn-primary btn-sm">Add New</button>
+            <button id="addtag" type="button" class="btn btn-primary btn-sm">Add New</button>
         </div>
-        <div class="col-md-9">
-            <button type="button" class="btn-close">Cell or Tissue</button>
-            <button type="button" class="btn-close">Tag</button>
+    </div>
+    <div class="col-md-9">
+        <div class="mt-4" id="added_tags">
+            <button type="button" class="btn btn-sm btn-secondary">Cell or Tissue<span class="tagclose"> &times;</span></button>
+            <button type="button" class="btn btn-sm btn-secondary">Tag<span class="tagclose"> &times;</span></button>
         </div>
-
     </div>
 </div>
 
