--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -6,13 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <!-- Data Tables -->
-    <link href="https://cdn.datatables.net/1.11.4/css/dataTables.bootstrap5.min.css" rel="stylesheet">
-
-    <!-- JSTree -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" />
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 
     <!-- CSS -->
     <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
@@ -25,9 +19,8 @@
     <div id="logindiv" class="modal" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-          <div class="modal-header">
-            <h2 class="modal-title">Log In</h2>
-            <img class="float-end" src="{{ url_for('static', filename='images/bioinformatics_logo.svg') }}" width="100px">
+          <div class="modal-header text-center">
+            <img src="{{ url_for('static', filename='images/pims_logo_path.svg') }}" style="margin-left:auto; margin-right:auto", width="250px">
           </div>
           <div class="modal-body">
               <label for="username">Username</label>
