--- a/www/templates/edit_project.html
+++ b/www/templates/edit_project.html
@@ -54,7 +54,7 @@
 </div>
 
 <div class="row mt-5">
-    <button id="saveproject" type="button" class="btn btn-primary">Save Project</button>
+    <button id="saveproject" type="button" class="btn btn-primary" style="width:25%;margin-left: auto;margin-right: auto;">Save Project</button>
 </div>
 
 
