Sample editing now fully working

--- a/www/templates/project.html
+++ b/www/templates/project.html
@@ -78,7 +78,7 @@
         <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header text-center">
-            <h2>Add Sample</h2>
+            <h2 id="sample_modal_header">Add Sample</h2>
             </div>
             <div class="modal-body">
                 <label for="sample_name">Sample Name</label>
